# api-test-task

./: .dockerignore  .env  .gitignore  .pylintrc  Dockerfile  Makefile  README.md  pyproject.toml  rates.json  requirements.txt
alembic/: env.py
alembic/versions/: 349544795a61_initial_revision.py  736552ac9cfa_renamed_tables.py
app/: __init__.py  main.py  settings.py  utils.py
app/v1/: __init__.py  main.py
app/v1/insurance/: __init__.py  main.py  schemas.py
db/: main.py  models.py
deploy/: .env  docker-compose.yml
