[tool.poetry]
name = "api-test-task"
version = "1.1.7"
description = ""
authors = ["Nick Smirnov <na.smirnov@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.36"
pydantic-settings = "^2.6.1"
asyncpg = "^0.30.0"

[tool.poetry.group.app.dependencies]
fastapi = "^0.115.5"
uvicorn = "^0.32.1"

[tool.poetry.group.migration.dependencies]
alembic = "^1.14.0"
greenlet = "^3.1.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.13.0"
pylint = "^3.3.1"
flake8 = "^7.1.1"
black = "^24.10.0"
ruff = "^0.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
